--- a/styles/hero.css
+++ b/styles/hero.css
@@ -7,6 +7,7 @@ section.hero {
   align-items: center;
   justify-content: space-between;
   overflow: hidden;
+  height: 80vh;
 
   & h1 div {
     display: inline-block;
@@ -149,10 +150,12 @@ section.hero {
 
 
 @keyframes slideUp {
+
   0%,
   22% {
     transform: translateY(0);
   }
+
   23% {
     transform: translateY(calc(-5rem - 15px));
   }
@@ -168,10 +171,12 @@ section.hero {
   29% {
     transform: translateY(calc(-5rem + 5px));
   }
+
   33%,
   55% {
     transform: translateY(-5rem);
   }
+
   56% {
     transform: translateY(calc(-10rem - 15px));
   }
@@ -187,6 +192,7 @@ section.hero {
   62% {
     transform: translateY(calc(-10rem + 5px));
   }
+
   66%,
   88% {
     transform: translateY(-10rem);
