--- a/styles/index.css
+++ b/styles/index.css
@@ -4,3 +4,5 @@
 @import url(footer.css);
 @import url(main.css);
 @import url(solutions.css);
+@import url(banner.css);
+@import url(diferentions.css);
