--- a/styles/banner.css
+++ b/styles/banner.css
@@ -1,4 +1,3 @@
-
 .main-banner .conteudo {
   text-align: center;
 
@@ -8,15 +7,17 @@
     font-size: 48px;
     font-family: "Barlow", sans-serif;
     color: white;
+    text-shadow: 6px 4px 2px rgba(0, 0, 0, 0.603);
 
   }
-  
+
 
   & span {
     text-transform: uppercase;
     font-size: 18px;
     font-weight: bold;
     color: white;
+    text-shadow: 4px 2px 1px rgba(0, 0, 0, 0.603);
   }
 }
 
