--- a/styles/diferentions.css
+++ b/styles/diferentions.css
@@ -1,6 +1,10 @@
 @import url('https://fonts.googleapis.com/css2?family=Barlow:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap');
 
 section.diferentions {
+  background-image: url(../img/solutionsfundo.jpg);
+}
+
+.diferentions-content {
   max-width: 80rem;
   width: 100%;
   padding: 2.5rem 2rem;
@@ -22,12 +26,44 @@ section.diferentions {
   }
 
   & h2 {
-    margin-top: 30px;
+    margin-block: 30px 50px;
     font-weight: 700;
     font-size: 48px;
     font-family: "Inter", sans-serif;
     color: #000;
     text-shadow: 1px 1px 1px rgba(0, 0, 0, 0.548);
   }
+
+}
+
+
+
+.diferentions-body {
+  display: grid;
+  grid-template-columns: 1fr 1fr 1fr;
+  gap: 40px;
+
+  & img {
+    width: 100%;
+    height: 240px;
+    border-radius: 4px 4px 0 0;
+  }
+
+  & figure {
+    background-color: #ccc;
+    background-size: contain;
+    height: 450px;
+    border-radius: 4px;
+  }
+
+  & figcaption {
+    padding: 10px 30px;
+
+    & h3 {
+      margin-bottom: 20px;
+      font-size: 24px;
+    }
+  }
+
 
 }
