--- a/styles/header.css
+++ b/styles/header.css
@@ -1,4 +1,4 @@
-header {
+.header-container {
   margin-inline: auto;
   width: 100%;
   padding-inline: 80px;
@@ -6,7 +6,7 @@ header {
   align-items: center;
   justify-content: space-between;
   background-color: #000000e7;
-  max-height: 100px;
+  height: 100px;
   font-family: "Inter", sans-serif;
 
 }
@@ -45,6 +45,7 @@ header {
   color: white;
   border: 1px solid rgba(255, 255, 255, 0.493);
   background-color: #292929;
+
   padding: 4px 10px;
   border-radius: 8px;
 }
@@ -53,9 +54,73 @@ header {
   background-color: #29292969;
 }
 
-@media (max-width: 800px) {
-  header {
+.menuTop_content {
+  display: flex;
+  justify-content: space-between;
+
+  & .Content {
+    padding-inline: 10px;
+    width: 100%;
+    text-align: center;
+    height: 60px;
+    background-color: #000000e7;
+    align-items: center;
+    justify-items: center;
+    display: flex;
+    border-bottom: 5px transparent #000000bb;
+    cursor: pointer;
+    border-top: 1px solid #000000b6;
+    text-transform: uppercase;
+    font-size: 14px;
+
+    & a {
+      color: rgba(255, 255, 255, 0.685);
+      width: 100%;
+      font-family: "Inter", sans-serif;
+    }
+
+    & a:hover {
+      color: white;
+    }
+  }
+
+  .Content:nth-child(1) {
+    border-bottom: 5px solid rgba(0, 0, 255, 0.749);
+
+    & a {
+      color: white;
+      text-shadow: 1px 1px 1px black;
+    }
+  }
+}
+
+@media (max-width: 1200px) {
+  .header-container {
     padding-inline: 20px;
+
+
+    & .configuracoes,
+    .usuario {
+      padding: 3px 8px;
+      font-size: 15px;
+    }
+
+    & .configuracoes img,
+    .usuario img {
+      height: 21px;
+
+    }
+  }
+
+  .menuTop_content {
+    padding-inline: 0px;
+  }
+}
+
+@media (max-width: 800px) {
+  .header-container {
+    padding-inline: 20px;
+    max-height: 80px;
 
     & .configuracoes,
     .usuario {
@@ -79,11 +144,19 @@ header {
       width: 120px;
     }
   }
+
+  .menuTop_content {
+    & .Content {
+      font-size: 11px;
+      height: 50px;
+    }
+  }
 }
 
 @media (max-width: 450px) {
-  header {
+  .header-container {
     padding-inline: 20px;
+    max-height: 60px;
 
     & .configuracoes,
     .usuario {
@@ -99,5 +172,9 @@ header {
       height: 100px;
       width: 100px;
     }
+  }
+
+  .menuTop_content {
+    display: none;
   }
 }
