--- a/styles/hero.css
+++ b/styles/hero.css
@@ -1,5 +1,5 @@
 section.hero {
-  max-width: 80rem;
+  max-width: 100rem;
   width: 100%;
   padding: 2.5rem 2rem;
   margin-inline: auto;
@@ -8,6 +8,7 @@ section.hero {
   justify-content: space-between;
   overflow: hidden;
   height: 80vh;
+
 
   & h1 div {
     display: inline-block;
@@ -23,15 +24,15 @@ section.hero {
 
   & h1 span:nth-child(1),
   & h1 span:nth-child(4) {
-    color: var(--car-sky-mid);
+    color: green;
   }
 
   & h1 span:nth-child(2) {
-    color: var(--car-joy-mid);
+    color: orange;
   }
 
   & h1 span:nth-child(3) {
-    color: var(--car-leaf-mid);
+    color: red;
   }
 
   & h1 span {
@@ -56,7 +57,7 @@ section.hero {
 
       &.services {
         padding: 1.5rem 3rem;
-        background-color: var(--car-sun);
+        background-color: rgba(0, 0, 255, 0.75);
         color: white;
       }
 
@@ -86,8 +87,8 @@ section.hero {
   &>div:nth-child(2) {
     display: block;
     width: 100%;
-    max-width: 30.5rem;
-    height: 30.5rem;
+    max-width: 688px;
+    height: 688px;
 
     & .content {
       width: 100%;
@@ -143,11 +144,6 @@ section.hero {
     opacity: 1;
   }
 }
-
-
-
-
-
 
 @keyframes slideUp {
 
@@ -217,5 +213,79 @@ section.hero {
 
   100% {
     transform: translateY(-15rem);
+  }
+}
+
+
+@media (max-width: 1200px) {
+  section.hero {
+    max-width: 80rem;
+    height: 55vh;
+    background-image: url(../img/hero/hero-background.jpg);
+    background-size: cover;
+    background-repeat: no-repeat;
+    background-position: center;
+
+
+    &>div:nth-child(1) {
+      text-align: center;
+      margin-inline: auto;
+      color: white;
+      text-shadow: 2px 2px 4px rgba(0, 0, 0, 0.712);
+    }
+
+    &>div:nth-child(2) {
+      display: none;
+    }
+  }
+}
+
+@media (max-width: 800px) {}
+
+@media (max-width: 450px) {
+  section.hero {
+    max-width: 100vw;
+    padding-inline: 10px;
+    height: 80vh;
+
+
+    &>div:nth-child(1) {
+      text-align: center;
+
+      & h1 {
+        font-size: 40px;
+        max-width: 20rem;
+
+      }
+
+      & h1 span {
+        font-size: 63px;
+      }
+
+
+    }
+
+    & .buttons {
+      flex-direction: column;
+      align-items: center;
+      justify-items: center;
+
+      & .button {
+        gap: 0.45rem;
+
+        &.services {
+          padding: 1rem 3rem;
+        }
+
+        &.agenda {
+          align-items: center;
+          justify-items: center;
+        }
+
+        &.agenda span {
+          padding: 1rem
+        }
+      }
+    }
   }
 }
