--- a/styles/solutions.css
+++ b/styles/solutions.css
@@ -48,3 +48,39 @@
   }
 
 }
+
+
+@media (max-width: 1200px) {
+  .solutions-body .elements {
+    grid-template-columns: 1fr 1fr 1fr;
+  }
+}
+
+@media (max-width: 450px) {
+  .solutions-intro {
+    & h2 {
+      font-size: 35px;
+      line-height: 1.2;
+      margin-bottom: 10px;
+    }
+
+    & p {
+      font-size: 18px;
+    }
+  }
+
+  .solutions-element {
+    max-width: 80rem;
+    padding: 1rem 1.5rem;
+  }
+
+  .solutions-body .elements {
+    grid-template-columns: 1fr 1fr;
+    font-size: 13px;
+
+    & span {
+      gap: 4px;
+      align-items: center;
+    }
+  }
+}
