atualizando homepage pós trabalho

--- a/styles/footer.css
+++ b/styles/footer.css
@@ -1,12 +1,17 @@
+a {
+  text-decoration: none;
+}
+
 footer {
   display: grid;
   grid-template-columns: 1fr 1fr 1fr;
   gap: 20px;
-  width: 100%;
   padding-inline: 80px;
   background-color: #000000e7;
   font-family: "Inter", sans-serif;
-
+  padding-bottom: 10px;
+  max-width: 100%;
+  overflow: hidden;
 }
 
 footer h4 {
@@ -19,7 +24,6 @@ footer span {
   color: white;
   font-size: 18px;
 }
-
 
 .contato {
   display: flex;
@@ -47,7 +51,6 @@ footer span {
     display: flex;
     gap: 10px;
     align-items: center;
-
   }
 }
 
@@ -58,11 +61,12 @@ footer span {
   border-inline: 1px solid rgba(0, 0, 0, 0.747);
 }
 
-
 @media (max-width: 800px) {
   footer {
     grid-template-columns: auto auto;
     padding-block: 20px 30px;
+    /* position: absolute;
+    bottom: 0; */
   }
 
   footer h4 {
